// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`index.html block works out 1`] = `
Object {
  "id": "30",
  "x": 3,
  "y": 0,
}
`;

exports[`index.js path mark works fine 1`] = `
HTMLCollection [
  <div
    class="blue"
  />,
]
`;

exports[`index.js select function paint cells 1`] = `
HTMLCollection [
  <div
    class="red"
  />,
]
`;
